--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,7 @@
         "symfony/routing": "^4.4 || ^5.0",
         "symfony/var-exporter": "^4.4 || ^5.0",
         "symfony/yaml": "^4.4 || ^5.0",
-        "twig/twig": "^1.43 || ^2.0"
+        "twig/twig": "^2.14.11"
     },
     "require-dev": {
         "ext-curl": "*",
